# fastApiDemo

./: pyproject.toml  readme.md  requirements.txt
